--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This assignment will help you learn to create an installable Node.js module package. You'll also provide a command line interface with it.",
   "main": "./lib/roll.js",
   "scripts": {
-    "test": "node ./bin/cli.js"
+    "test": "roll-dice --sides=10 --dice=2 --rolls=3"
   },
   "repository": {
     "type": "git",
